assets/css/style.css
/* Set how much of the viewable space is taken up */
html,
body {
  height: 100vh;
  width: 100%;
  padding: 0px 0px 0px 0px;
}
body

.container-fluid{

    padding: 0px 0px 0px 0px;

}

#dashboard-title{
    background-color: black;
    color: white;
}

.dayforecast{

  background-color: blue;
  margin: 5px;
  padding: 5px;
  border: solid 1px black;
  color: white;
  font-size: 0.6em;
}

#city-form{

  font-size: 0.875em;
}

#prior-search-area{

border: 1px solid blue;

}

hr{

  color: black;
}

